News UAT/force-app/main/default/objects/Exception_Record__c/Exception_Record__c.object-meta.xml
<CustomObject>
    <description>This object is to store exception records throw from batches</description>
    <label>Exception Record</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Exception Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>