News UAT/force-app/main/default/objects/Exception_Record__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>This field determines what action/batch causes this record failed. It&#39;s very important for trigger/controller/batch to pickup failure records.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TGS</fullName>
            </value>
            <value>
                <fullName>TCSTAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>