News UAT/force-app/main/default/objects/Exception_Record__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>This includes details about why this record failed</description>
    <label>Failure Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>