News UAT/force-app/main/default/objects/Exception_Record__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <description>object type</description>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Sales_Order__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>