News UAT/force-app/main/default/objects/Exception_Record__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>