News UAT/force-app/main/default/objects/Exception_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Failure_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Action_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>